--- a/NewmanMobileApp/NewmanMobileApp.Android/NewmanMobileApp.Android.csproj
+++ b/NewmanMobileApp/NewmanMobileApp.Android/NewmanMobileApp.Android.csproj
@@ -65,6 +65,7 @@
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SplashActivity.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
@@ -95,6 +96,21 @@
       <Project>{BA5038F5-A576-488C-85D0-A2C4A6837050}</Project>
       <Name>NewmanMobileApp</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\questions.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Assets\AboutResources.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="Assets\questions.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\splash_screen.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\splash_logo.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
